{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 320,
  "lineage": "938a4a17-4d75-ba9e-6637-a2d2c72ee966",
  "resources": [
    {
      "module": "module.BastionHost",
      "mode": "data",
      "type": "aws_subnet",
      "name": "BastionHostNet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0ddf562bbf1f837d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 10,
            "cidr_block": "10.0.4.32/28",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-bastion-host"
                ]
              }
            ],
            "id": "subnet-0ddf562bbf1f837d6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342495404680",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "Name": "prod-bastion-host"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          }
        }
      ]
    },
    {
      "module": "module.BastionHost",
      "mode": "managed",
      "type": "aws_instance",
      "name": "BastionHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-013f17f36f8b1fefb",
            "arn": "arn:aws:ec2:us-east-1:342495404680:instance/i-054fcd8c647969e6e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054fcd8c647969e6e",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "prod-BastionHost-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0edf5490629f372c0",
            "private_dns": "ip-10-0-4-40.ec2.internal",
            "private_ip": "10.0.4.40",
            "public_ip": "35.168.14.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0840c816b28ec5fc6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c4ad002e785a394c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddf562bbf1f837d6",
            "tags": {
              "Environment": "prod",
              "Name": "prod-BastionHost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c4ad002e785a394c"
            ]
          },
          "dependencies": [
            "module.BastionHost.aws_key_pair.BastionHost",
            "module.BastionHost.aws_security_group.bastion_host_gp",
            "module.BastionHost.data.aws_subnet.BastionHostNet",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.ab",
            "module.vpc.aws_route_table_association.ac",
            "module.vpc.aws_route_table_association.ad",
            "module.vpc.aws_route_table_association.ae",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.BastionHost",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_gp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:security-group/sg-0c4ad002e785a394c",
            "description": "Bastion Host security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4ad002e785a394c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Salt ",
                "from_port": 4505,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4506
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BastionHost Security Group",
            "name_prefix": "",
            "owner_id": "342495404680",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-BastionHost-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.ab",
            "module.vpc.aws_route_table_association.ac",
            "module.vpc.aws_route_table_association.ad",
            "module.vpc.aws_route_table_association.ae",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.Database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:security-group/sg-06a0e46c2ec633bfc",
            "description": "RDS Host security group",
            "egress": [],
            "id": "sg-06a0e46c2ec633bfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "RDS Security Group",
            "name_prefix": "",
            "owner_id": "342495404680",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.ab",
            "module.vpc.aws_route_table_association.ac",
            "module.vpc.aws_route_table_association.ad",
            "module.vpc.aws_route_table_association.ae",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.Project_ASG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "back_host_gp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:security-group/sg-011e7679a60a10e2a",
            "description": "BackEnd Host security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.4.0/28",
                  "10.0.4.16/28"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-011e7679a60a10e2a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "apollo-server app",
                "from_port": 3500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3500
              },
              {
                "cidr_blocks": [
                  "10.0.4.32/28"
                ],
                "description": "Salt ",
                "from_port": 4505,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4506
              },
              {
                "cidr_blocks": [
                  "10.0.4.32/28"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-BackEnd-Security-Group",
            "name_prefix": "",
            "owner_id": "342495404680",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-Front-End-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.BastionHost.aws_instance.BastionHost",
            "module.BastionHost.aws_key_pair.BastionHost",
            "module.BastionHost.aws_security_group.bastion_host_gp",
            "module.BastionHost.data.aws_ami.ubuntu",
            "module.BastionHost.data.aws_subnet.BastionHostNet",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.ab",
            "module.vpc.aws_route_table_association.ac",
            "module.vpc.aws_route_table_association.ad",
            "module.vpc.aws_route_table_association.ae",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.Project_ASG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front_host_gp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:security-group/sg-06f92d97f514d38af",
            "description": "FrontEnd Host security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 3500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3500
              }
            ],
            "id": "sg-06f92d97f514d38af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "react-app",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.0.4.32/28"
                ],
                "description": "Salt ",
                "from_port": 4505,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4506
              },
              {
                "cidr_blocks": [
                  "10.0.4.32/28"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-FrontEnd-Security-Group",
            "name_prefix": "",
            "owner_id": "342495404680",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-Front-End-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.BastionHost.aws_instance.BastionHost",
            "module.BastionHost.aws_key_pair.BastionHost",
            "module.BastionHost.aws_security_group.bastion_host_gp",
            "module.BastionHost.data.aws_ami.ubuntu",
            "module.BastionHost.data.aws_subnet.BastionHostNet",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.ab",
            "module.vpc.aws_route_table_association.ac",
            "module.vpc.aws_route_table_association.ad",
            "module.vpc.aws_route_table_association.ae",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "data",
      "type": "aws_subnet",
      "name": "back1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0bd6454fcb8b3a34e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-back-end-a"
                ]
              }
            ],
            "id": "subnet-0bd6454fcb8b3a34e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "Name": "prod-back-end-a"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          }
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "data",
      "type": "aws_subnet",
      "name": "back2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-097b034579afe2593",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-back-end-b"
                ]
              }
            ],
            "id": "subnet-097b034579afe2593",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "Name": "prod-back-end-b"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          }
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "data",
      "type": "aws_subnet",
      "name": "front1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-080fd48bab4c81bbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-front-end-a"
                ]
              }
            ],
            "id": "subnet-080fd48bab4c81bbb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342495404680",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "Name": "prod-front-end-a"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          }
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "data",
      "type": "aws_subnet",
      "name": "front2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0aeac1d454309f112",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-front-end-b"
                ]
              }
            ],
            "id": "subnet-0aeac1d454309f112",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342495404680",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "Name": "prod-front-end-b"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          }
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "back_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:loadbalancer/app/prod-Back-end-balancer/2f6450c00aacf8b4",
            "arn_suffix": "app/prod-Back-end-balancer/2f6450c00aacf8b4",
            "dns_name": "internal-prod-Back-end-balancer-463094779.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:342495404680:loadbalancer/app/prod-Back-end-balancer/2f6450c00aacf8b4",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-Back-end-balancer",
            "security_groups": [
              "sg-00ddbcfb1be85c2be"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-097b034579afe2593"
              },
              {
                "subnet_id": "subnet-0bd6454fcb8b3a34e"
              }
            ],
            "subnets": [
              "subnet-097b034579afe2593",
              "subnet-0bd6454fcb8b3a34e"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-Back-end-balancer"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.BastionHost.aws_instance.BastionHost",
            "module.BastionHost.aws_key_pair.BastionHost",
            "module.BastionHost.aws_security_group.bastion_host_gp",
            "module.BastionHost.data.aws_ami.ubuntu",
            "module.BastionHost.data.aws_subnet.BastionHostNet",
            "module.front_load_balancer.aws_security_group.backEndLoadSecurityGroup",
            "module.front_load_balancer.data.aws_subnet.back1",
            "module.front_load_balancer.data.aws_subnet.back2",
            "module.front_load_balancer.data.aws_subnet.front1",
            "module.front_load_balancer.data.aws_subnet.front2",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.ab",
            "module.vpc.aws_route_table_association.ac",
            "module.vpc.aws_route_table_association.ad",
            "module.vpc.aws_route_table_association.ae",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:loadbalancer/app/prod-Front-load-balancer/68860c41caa85907",
            "arn_suffix": "app/prod-Front-load-balancer/68860c41caa85907",
            "dns_name": "prod-Front-load-balancer-1483431380.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:342495404680:loadbalancer/app/prod-Front-load-balancer/68860c41caa85907",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-Front-load-balancer",
            "security_groups": [
              "sg-0ed25a9d7a07fd831"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-080fd48bab4c81bbb"
              },
              {
                "subnet_id": "subnet-0aeac1d454309f112"
              }
            ],
            "subnets": [
              "subnet-080fd48bab4c81bbb",
              "subnet-0aeac1d454309f112"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-Front-load-balancer"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.BastionHost.aws_instance.BastionHost",
            "module.BastionHost.aws_key_pair.BastionHost",
            "module.BastionHost.aws_security_group.bastion_host_gp",
            "module.BastionHost.data.aws_ami.ubuntu",
            "module.BastionHost.data.aws_subnet.BastionHostNet",
            "module.front_load_balancer.aws_security_group.frontEndLoadSecurityGroup",
            "module.front_load_balancer.data.aws_subnet.front1",
            "module.front_load_balancer.data.aws_subnet.front2",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.ab",
            "module.vpc.aws_route_table_association.ac",
            "module.vpc.aws_route_table_association.ad",
            "module.vpc.aws_route_table_association.ae",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_end_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:listener/app/prod-Back-end-balancer/2f6450c00aacf8b4/4eed8864eb375583",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:targetgroup/prod-back-lb-group/cd77d619884ad24c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342495404680:listener/app/prod-Back-end-balancer/2f6450c00aacf8b4/4eed8864eb375583",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:loadbalancer/app/prod-Back-end-balancer/2f6450c00aacf8b4",
            "port": 3500,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.BastionHost.aws_instance.BastionHost",
            "module.BastionHost.aws_key_pair.BastionHost",
            "module.BastionHost.aws_security_group.bastion_host_gp",
            "module.BastionHost.data.aws_ami.ubuntu",
            "module.BastionHost.data.aws_subnet.BastionHostNet",
            "module.front_load_balancer.aws_lb.back_lb",
            "module.front_load_balancer.aws_lb_target_group.back-end-machines",
            "module.front_load_balancer.aws_security_group.backEndLoadSecurityGroup",
            "module.front_load_balancer.data.aws_subnet.back1",
            "module.front_load_balancer.data.aws_subnet.back2",
            "module.front_load_balancer.data.aws_subnet.front1",
            "module.front_load_balancer.data.aws_subnet.front2",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.ab",
            "module.vpc.aws_route_table_association.ac",
            "module.vpc.aws_route_table_association.ad",
            "module.vpc.aws_route_table_association.ae",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:listener/app/prod-Front-load-balancer/68860c41caa85907/429284a075e20780",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:targetgroup/prod-front-lb-group/b7af0f710b3e1bdf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342495404680:listener/app/prod-Front-load-balancer/68860c41caa85907/429284a075e20780",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:loadbalancer/app/prod-Front-load-balancer/68860c41caa85907",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.BastionHost.aws_instance.BastionHost",
            "module.BastionHost.aws_key_pair.BastionHost",
            "module.BastionHost.aws_security_group.bastion_host_gp",
            "module.BastionHost.data.aws_ami.ubuntu",
            "module.BastionHost.data.aws_subnet.BastionHostNet",
            "module.front_load_balancer.aws_lb.front_lb",
            "module.front_load_balancer.aws_lb_target_group.front-end-machines",
            "module.front_load_balancer.aws_security_group.frontEndLoadSecurityGroup",
            "module.front_load_balancer.data.aws_subnet.front1",
            "module.front_load_balancer.data.aws_subnet.front2",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.ab",
            "module.vpc.aws_route_table_association.ac",
            "module.vpc.aws_route_table_association.ad",
            "module.vpc.aws_route_table_association.ae",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back-end-machines",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:targetgroup/prod-back-lb-group/cd77d619884ad24c",
            "arn_suffix": "targetgroup/prod-back-lb-group/cd77d619884ad24c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342495404680:targetgroup/prod-back-lb-group/cd77d619884ad24c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-back-lb-group",
            "port": 3500,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "dependencies": [
            "module.BastionHost.aws_instance.BastionHost",
            "module.BastionHost.aws_key_pair.BastionHost",
            "module.BastionHost.aws_security_group.bastion_host_gp",
            "module.BastionHost.data.aws_ami.ubuntu",
            "module.BastionHost.data.aws_subnet.BastionHostNet",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.ab",
            "module.vpc.aws_route_table_association.ac",
            "module.vpc.aws_route_table_association.ad",
            "module.vpc.aws_route_table_association.ae",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front-end-machines",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342495404680:targetgroup/prod-front-lb-group/b7af0f710b3e1bdf",
            "arn_suffix": "targetgroup/prod-front-lb-group/b7af0f710b3e1bdf",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342495404680:targetgroup/prod-front-lb-group/b7af0f710b3e1bdf",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-front-lb-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "dependencies": [
            "module.BastionHost.aws_instance.BastionHost",
            "module.BastionHost.aws_key_pair.BastionHost",
            "module.BastionHost.aws_security_group.bastion_host_gp",
            "module.BastionHost.data.aws_ami.ubuntu",
            "module.BastionHost.data.aws_subnet.BastionHostNet",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.ab",
            "module.vpc.aws_route_table_association.ac",
            "module.vpc.aws_route_table_association.ad",
            "module.vpc.aws_route_table_association.ae",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backEndLoadSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:security-group/sg-00ddbcfb1be85c2be",
            "description": "backLoadBalancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-00ddbcfb1be85c2be",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "backLoadBalancer Security Group",
            "name_prefix": "",
            "owner_id": "342495404680",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.BastionHost.aws_instance.BastionHost",
            "module.BastionHost.aws_key_pair.BastionHost",
            "module.BastionHost.aws_security_group.bastion_host_gp",
            "module.BastionHost.data.aws_ami.ubuntu",
            "module.BastionHost.data.aws_subnet.BastionHostNet",
            "module.front_load_balancer.data.aws_subnet.back1",
            "module.front_load_balancer.data.aws_subnet.back2",
            "module.front_load_balancer.data.aws_subnet.front1",
            "module.front_load_balancer.data.aws_subnet.front2",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.ab",
            "module.vpc.aws_route_table_association.ac",
            "module.vpc.aws_route_table_association.ad",
            "module.vpc.aws_route_table_association.ae",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.front_load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontEndLoadSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:security-group/sg-0ed25a9d7a07fd831",
            "description": "frontLoadBalancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0ed25a9d7a07fd831",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "frontLoadBalancer Security Group",
            "name_prefix": "",
            "owner_id": "342495404680",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.BastionHost.aws_instance.BastionHost",
            "module.BastionHost.aws_key_pair.BastionHost",
            "module.BastionHost.aws_security_group.bastion_host_gp",
            "module.BastionHost.data.aws_ami.ubuntu",
            "module.BastionHost.data.aws_subnet.BastionHostNet",
            "module.vpc.aws_db_subnet_group.db_subnet",
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.ab",
            "module.vpc.aws_route_table_association.ac",
            "module.vpc.aws_route_table_association.ad",
            "module.vpc.aws_route_table_association.ae",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-03fbd48ec1961bd7c",
            "id": "rtb-03fbd48ec1961bd7c",
            "owner_id": "342495404680",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043d857fcef5d3896",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-subnet"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "Natgateway-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e76ebdee765eb7b2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-210-168-66.compute-1.amazonaws.com",
            "public_ip": "18.210.168.66",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:internet-gateway/igw-043d857fcef5d3896",
            "id": "igw-043d857fcef5d3896",
            "owner_id": "342495404680",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e76ebdee765eb7b2",
            "id": "nat-0c517a0259345ef53",
            "network_interface_id": "eni-0e0f8ec8cbb2b9d3d",
            "private_ip": "10.0.4.46",
            "public_ip": "18.210.168.66",
            "subnet_id": "subnet-0ddf562bbf1f837d6"
          },
          "dependencies": [
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ae1dcf1eae51e9ea",
            "owner_id": "342495404680",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c517a0259345ef53",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private-subnet"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d07768efb0a3050",
            "route_table_id": "rtb-03fbd48ec1961bd7c",
            "subnet_id": "subnet-080fd48bab4c81bbb"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc21b5e755d59d92",
            "route_table_id": "rtb-03fbd48ec1961bd7c",
            "subnet_id": "subnet-0aeac1d454309f112"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae141fb548f2d940",
            "route_table_id": "rtb-0ae1dcf1eae51e9ea",
            "subnet_id": "subnet-0bd6454fcb8b3a34e"
          },
          "dependencies": [
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ad",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e6dc57046849c7e",
            "route_table_id": "rtb-0ae1dcf1eae51e9ea",
            "subnet_id": "subnet-097b034579afe2593"
          },
          "dependencies": [
            "module.vpc.aws_eip.Natgateway-elastic-ip",
            "module.vpc.aws_nat_gateway.NatGateway",
            "module.vpc.aws_route_table.r",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ae",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e458af6d85013c55",
            "route_table_id": "rtb-03fbd48ec1961bd7c",
            "subnet_id": "subnet-0ddf562bbf1f837d6"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.route_table",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-080fd48bab4c81bbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-080fd48bab4c81bbb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "prod",
              "Name": "prod-front-end-a"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-front-end-a"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0aeac1d454309f112",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0aeac1d454309f112",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "prod",
              "Name": "prod-front-end-b"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-front-end-b"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0bd6454fcb8b3a34e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0bd6454fcb8b3a34e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "prod",
              "Name": "prod-back-end-a"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-back-end-a"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-097b034579afe2593",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-097b034579afe2593",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "prod",
              "Name": "prod-back-end-b"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-back-end-b"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0fd826f512210b5ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/28",
            "id": "subnet-0fd826f512210b5ea",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "prod",
              "Name": "prod-database-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-database-1"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-04e9f04a026c8d796",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.16/28",
            "id": "subnet-04e9f04a026c8d796",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "prod",
              "Name": "prod-database-2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-database-2"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:subnet/subnet-0ddf562bbf1f837d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.32/28",
            "id": "subnet-0ddf562bbf1f837d6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342495404680",
            "tags": {
              "Environment": "prod",
              "Name": "prod-bastion-host"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-bastion-host"
            },
            "vpc_id": "vpc-0dc73e600eb6d5123"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342495404680:vpc/vpc-0dc73e600eb6d5123",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba2cde936bc4ee7c",
            "default_route_table_id": "rtb-03fbd48ec1961bd7c",
            "default_security_group_id": "sg-0f14be2859d72c3e5",
            "dhcp_options_id": "dopt-92bbd1e8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0dc73e600eb6d5123",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03fbd48ec1961bd7c",
            "owner_id": "342495404680",
            "tags": {
              "Environment": "prod",
              "Name": "prod-life-project-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-life-project-vpc"
            }
          }
        }
      ]
    }
  ]
}